# python-pkg-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yaml
docs/source/: conf.py
python_pkg/: greeting.py
tests/: test_greeting.py  test_python_pkg.py
