[tool.poetry]
name = "python_pkg"
version = "0.1.1"
description = "Hello world package example to learn about pypi packages and aws codeartifact"
authors = ["keanrawr <the.keanraw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "<5.0.0"
renku-sphinx-theme = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aws"
url = "https://rawr-023466420674.d.codeartifact.us-east-1.amazonaws.com/pypi/sandbox/"
secondary = true
