[tool.poetry]
name = "python_pkg"
version = "0.1.1"
description = "Hello world package example to learn about pypi packages and aws codeartifact"
authors = ["keanrawr <git@keanrawr.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
sphinx = "^5.3.0"
furo = "^2022.12.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aws"
url = "https://rawr-023466420674.d.codeartifact.us-east-1.amazonaws.com/pypi/sandbox/"
priority = "supplemental"
